Tests/project2/errors/missingend.flm
/* This tests for a missing end */

fun foo()
   i:int;
   begin
   while (i < 20) do
     begin
     write(i); print(" ")
   /* end;  */
   print("Finished\n")
   end



        
